--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ body,
     width: 39%; 
     height: 60%; 
     backdrop-filter: blur(3px) saturate(20%);
+    background: rgba(26, 26, 26, 0.452);
     padding: 20px;
     border-radius: 20px;
     overflow-y: auto;
